# Tensor-Network-Visualization

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md  clean.bat  clean.py  clean.sh  commands.md  example_tensor_network.py  pyproject.toml  pyrightconfig.json  requirements.dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: algorithms.md  api.md  backends.md  guide.md  installation.md  tensor_elements_ideas.md  troubleshooting.md
docs/superpowers/plans/: 2026-03-11-documentation-refresh.md  2026-04-05-show-nodes-compact-view.md
docs/superpowers/specs/: 2026-03-11-documentation-refresh-design.md  2026-04-05-show-nodes-compact-view-design.md  2026-04-18-translate-tensor-network-design.md
examples/: README.md  cubic_peps_demo.py  demo_cli.py  demo_tensors.py  einsum_demo.py  einsum_general.py  geometry_demo.py  mera_tree_demo.py  placements_demo.py  quimb_demo.py  run_all_examples.py  run_demo.py  tenpy_demo.py  tenpy_explicit_tn_demo.py  tensor_elements_demo.py  tensor_network_demo.py  tensorkrowch_demo.py  tensornetwork_demo.py  themes_demo.py  tn_tsp.py  total_tests.bat  translate_demo.py
scripts/: bench_layout_compare.py  bench_layout_draw.py  bench_render_workflows.py  bench_user_workflows.py  clean.bat  clean.py  clean.sh  generate_doc_images.py  verify.py
src/plotting/: config.py  viewer.py
src/tensor_network_viz/: __init__.py  _auto_display.py  _contraction_viewer_style.py  _contraction_viewer_ui.py  _engine_specs.py  _import_state.py  _input_inspection.py  _interactive_scene.py  _logging.py  _matplotlib_state.py  _registry.py  _tensor_comparison_support.py  _tensor_elements_controller.py  _tensor_elements_data.py  _tensor_elements_inputs.py  _tensor_elements_models.py  _tensor_elements_payloads.py  _tensor_elements_rendering.py  _tensor_elements_support.py  _translation_codegen.py  _translation_models.py  _typing.py  _ui_utils.py  _widgets.py  config.py  contraction_viewer.py  exceptions.py  interactive_viewer.py  snapshot.py  tensor_comparison.py  tensor_comparison_config.py  tensor_elements.py  tensor_elements_config.py  translation.py  viewer.py
src/tensor_network_viz/_core/: __init__.py  _draw_common.py  _label_format.py  _nodes_edges_common.py  axis_directions.py  contractions.py  curves.py  draw_2d.py  draw_3d.py  focus.py  graph.py  graph_cache.py  graph_utils.py  layout.py  layout_structure.py  layout_structure_coordinates.py  layout_structure_sparse_grid.py  renderer.py
src/tensor_network_viz/_core/draw/: __init__.py  constants.py  contraction_edges.py  contraction_scheme.py  dangling_self_edges.py  disk_metrics.py  edge_labels.py  edge_orchestration.py  edges.py  fonts_and_scale.py  graph_pipeline.py  hover.py  label_descriptors.py  labels_misc.py  pick_distance.py  plotter.py  plotter_2d.py  plotter_3d.py  plotter_common.py  render_prep.py  scene_state.py  tensors.py  vectors.py  viewport_geometry.py
src/tensor_network_viz/_core/layout/: __init__.py  body.py  direction_common.py  force_directed.py  free_directions_2d.py  free_directions_3d.py  generic_coarsening.py  geometry.py  parameters.py  positions.py  types.py
src/tensor_network_viz/_interaction/: bridge.py  controller.py  controls.py  scheme.py  state.py  tensor_inspector.py  views.py
src/tensor_network_viz/einsum/: __init__.py  renderer.py  trace.py
src/tensor_network_viz/einsum_module/: __init__.py  _backend.py  _equation.py  _trace_state.py  _trace_types.py  contraction_cost.py  graph.py  renderer.py  trace.py
src/tensor_network_viz/quimb/: __init__.py  graph.py  renderer.py
src/tensor_network_viz/tenpy/: __init__.py  explicit.py  graph.py  renderer.py
src/tensor_network_viz/tensorkrowch/: __init__.py  _draw_common.py  _history.py  curves.py  draw_2d.py  draw_3d.py  graph.py  layout.py  renderer.py
src/tensor_network_viz/tensornetwork/: __init__.py  graph.py  renderer.py
src/tensor_visualization/: __init__.py  plotting.py
src/tensorkrowch_engine/: renderer.py
tests/: conftest.py  plotting_helpers.py  test_bench_user_workflows.py  test_ci_workflow.py  test_contraction_cost.py  test_contraction_groups_once.py  test_contraction_scheme.py  test_contraction_scheme_api.py  test_contraction_viewer.py  test_demo_cli_scheme.py  test_documentation_gallery.py  test_draw_performance.py  test_edge_index_label_2d.py  test_edge_index_label_3d.py  test_einsum_autotrace.py  test_einsum_backend.py  test_engine_detection.py  test_engineering_baseline.py  test_examples.py  test_examples_structure.py  test_graph_cache.py  test_integration_einsum.py  test_integration_quimb.py  test_integration_tenpy.py  test_integration_tensorkrowch.py  test_integration_tensornetwork.py  test_interaction_controls.py  test_interaction_state.py  test_label_draw_metrics_perf.py  test_label_format.py  test_layout_core.py  test_lazy_imports.py  test_logging_and_exceptions.py  test_matplotlib_state.py  test_node_degrees_perf.py  test_packaging_metadata.py  test_plotting.py  test_public_api.py  test_quimb_backend.py  test_render_performance_controls.py  (+9 more)
tools/: extract_layout_body.py  generate_draw_package.py
