[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-network-visualization"
version = "1.0.0"
description = "Minimal Matplotlib visualizations for TensorKrowch tensor networks."
authors = [{ name = "Alejandro Mata Ali" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["tensor-network", "visualization", "tensorkrowch", "matplotlib"]
dependencies = [
    "matplotlib>=3.7",
    "networkx>=3.0",
    "tensorkrowch",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Repository = "https://github.com/DOKOS-TAYOS/Tensor-Network-Visualization"

[project.optional-dependencies]
dev = ["pytest", "ruff", "pyright"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tensor_network_viz = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
exclude = [".venv", ".tmp", ".pip_tmp", ".pytest_cache", ".ruff_cache", "pytest-cache-files-*", "tn_tsp.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
