[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-network-visualization"
version = "1.6.0"
description = "Minimal Matplotlib visualizations for TensorKrowch, TensorNetwork, Quimb, TeNPy, and traced PyTorch/NumPy einsum tensor networks."
authors = [{ name = "Alejandro Mata Ali" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["tensor-network", "visualization", "pytorch", "numpy", "tensorkrowch", "tensornetwork", "quimb", "tenpy", "einsum", "quantum-inspired", "matplotlib"]
dependencies = [
    "matplotlib>=3.7",
    "networkx>=3.0",
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/DOKOS-TAYOS/Tensor-Network-Visualization"
Documentation = "https://github.com/DOKOS-TAYOS/Tensor-Network-Visualization/blob/main/docs/guide.md"
Changelog = "https://github.com/DOKOS-TAYOS/Tensor-Network-Visualization/blob/main/CHANGELOG.md"
Repository = "https://github.com/DOKOS-TAYOS/Tensor-Network-Visualization"
Issues = "https://github.com/DOKOS-TAYOS/Tensor-Network-Visualization/issues"

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "ruff",
    "pyright",
    "ipython",
    "tensorkrowch",
    "tensornetwork",
    "quimb",
    "physics-tenpy",
]
jupyter = ["ipympl>=0.9.0", "ipywidgets>=8.0", "jupyterlab>=4.0", "notebook>=7.0"]
tensorkrowch = ["tensorkrowch"]
tensornetwork = ["tensornetwork"]
quimb = ["quimb"]
tenpy = ["physics-tenpy"]
einsum = ["torch"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tensor_network_viz = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider -m \"not perf\""
pythonpath = ["src"]
markers = [
    "perf: runtime-sensitive regression checks and throughput guards",
    "smoke: lightweight render smoke checks",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = [".venv", ".tmp", ".tmp_venv_*", ".pip_tmp", ".pytest_cache", ".ruff_cache", "pytest-cache-files-*", "tn_tsp.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "RUF100"]

[tool.ruff.lint.per-file-ignores]
# Examples set sys.path before importing local demo_cli (importlib-safe).
"examples/**/*.py" = ["E402"]
# Repo-root bench helpers insert ``src`` on sys.path before third-party imports.
"scripts/**/*.py" = ["E402"]
"src/tensor_network_viz/_core/layout/body.py" = ["F403", "F405"]
